[gd_scene load_steps=2 format=3 uid="uid://c82wcpf0xsbso"]

[ext_resource type="Script" path="res://level_up.gd" id="1_c2llv"]

[node name="LevelUp" type="CanvasLayer"]
script = ExtResource("1_c2llv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1576.0
offset_bottom = 890.0
color = Color(0.1404, 0.20994, 0.36, 0.517647)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_right = 36.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonDamage" type="Button" parent="."]
offset_left = 369.0
offset_top = 550.0
offset_right = 504.0
offset_bottom = 635.0
text = "DAMAGE"

[node name="ButtonSpeed" type="Button" parent="."]
offset_left = 587.0
offset_top = 549.0
offset_right = 722.0
offset_bottom = 634.0
text = "SPEED"

[node name="ButtonAttackSpeed" type="Button" parent="."]
offset_left = 823.0
offset_top = 549.0
offset_right = 958.0
offset_bottom = 634.0
text = "ATTACK_SPEED"

[node name="ButtonHealth" type="Button" parent="."]
offset_left = 1004.0
offset_top = 550.0
offset_right = 1139.0
offset_bottom = 635.0
text = "HEALTH"

[connection signal="pressed" from="ButtonDamage" to="." method="_on_button_damage_pressed"]
[connection signal="pressed" from="ButtonSpeed" to="." method="_on_button_speed_pressed"]
[connection signal="pressed" from="ButtonAttackSpeed" to="." method="_on_button_attack_speed_pressed"]
[connection signal="pressed" from="ButtonHealth" to="." method="_on_button_health_pressed"]
